<resources>
    <string name="app_name">Popular Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_highest_rate">Highest Rate</string>
    <string name="action_most_popular">Most Popular</string>
    <string name="error_msg_failed_to_load">Failed to load</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_msg_no_connection">No Connection</string>
    <string name="action_favorite_movies">Favorites</string>
    <string name="movie">Movies</string>
    <string name="reviews">Reviews</string>
    <string name="action_fav">Favorite</string>
    <string name="action_share">Share</string>
</resources>
