<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_most_popular"
        android:orderInCategory="100"
        android:title="@string/action_most_popular"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_highest_rate"
        android:orderInCategory="200"
        android:title="@string/action_highest_rate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_fav_movies"
        android:orderInCategory="300"
        android:title="@string/action_favorite_movies"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_fav"
        android:checkable="true"
        android:icon="@drawable/ic_favorite_outline_white_18dp"
        android:orderInCategory="100"
        android:title="@string/action_fav"
        app:showAsAction="always" />
    <item
        android:id="@+id/share"
        android:checkable="true"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        android:orderInCategory="200"
        android:title="@string/action_share"
        app:showAsAction="always" />


</menu>